improved display issues on mobile. not perfectly happy yet

--- a/index.css
+++ b/index.css
@@ -25,10 +25,10 @@
 }
 
 .nav {
-  border: 2px solid black;
   display: flex;
   margin: 10px;
   margin-inline: 0;
+  flex-wrap: wrap;
 }
 
 .large {
@@ -45,7 +45,7 @@
   scroll-snap-type: x mandatory;
   scrollbar-width: none;
   margin-inline: 10px;
-  height: 33vh;
+  min-height: 33vh;
 }
 
 .carousel::-webkit-scrollbar {
@@ -53,14 +53,14 @@
 }
 
 .project {
-  margin-inline: 15px;
   flex-shrink: 0;
   scroll-snap-align: center;
   width: 100%;
 }
 
 .project img {
-  height: 100%;
+  max-height: 33vh;
+  max-width: 100%;
 }
 
 .project.column {
@@ -89,6 +89,7 @@ h2 {
 
 h3 {
   font-size: 18px;
+  margin: 0;
 }
 
 img {
